# load-gear

./: .gitignore  CLAUDE.md  STATUS.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 004_financial_schema.py  005_add_project_name_user_id.py  006_add_error_context.py  007_add_financial_provider_id.py  0ef875775470_003_analysis_schema.py  28166ec29553_001_control_schema.py  68d3272b34d8_002_data_schema.py
configs/: app.yaml
data/: plz_centroids.csv
docker/: init-extensions.sql
docs/: AGENT-PROTOCOL.md  API.md  CODING-GUIDELINES.md  DEVELOPMENT_PROCESS.md  api-reference.md
docs/architecture/: decisions.md  overview.md
docs/memory/: MEMORY.md  debugging.md  project-structure.md
docs/modules/: analysis.md  financial.md  forecast.md  ingest.md  (+1 more)
prepare/: API_Endpointsv3.md  CLAUDE_SPECv3.md  Claude-Code-Agentisches-Framework1-1.md  LG_Pipeline_AgentContextv3.md
tests/: test_analysis_api.py  test_asset_fingerprint.py  test_day_classifier.py  test_day_matcher.py  test_dwd_import.py  test_files_api.py  test_financial_api.py  test_financial_calculator.py  test_financial_multi_provider.py  test_forecast_api.py  test_format_detector.py  test_geocoding.py  test_hpfc_api.py  test_hpfc_service.py  test_imputer.py  test_ingest_api.py  test_job_state_machine.py  test_jobs_api.py  test_normalizer.py  test_pipeline_api.py  test_prophet_trainer.py  test_qa_api.py  test_qa_checks.py  test_reader_profile_api.py  test_reader_profile_repo.py  test_strategies.py  test_weather_admin_api.py  test_weather_api.py  test_weather_enrichment.py
(+114 files in other folders)
